Fix bugs on ios and android phones

--- a/header.css
+++ b/header.css
@@ -320,7 +320,7 @@ body {
         display: none;
 
         .search-input {
-            scroll-margin-top: 80px;
+            scroll-margin-top: 150px;
         }
     }
 }
